load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@bazel_gazelle//:def.bzl", "gazelle")

prefix = "github.com/herumi/bls-go-binary"

# gazelle:prefix github.com/herumi/bls-go-binary
gazelle(
    name = "gazelle",
    prefix = prefix,
)

go_library(
    name = "go_default_library",
    srcs = ["sample.go"],
    importpath = "github.com/herumi/bls-go-binary",
    visibility = ["//visibility:private"],
    deps = ["//bls:go_default_library"],
)

go_binary(
    name = "sample",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["bls_test.go"],
    embed = [":go_default_library"],
    deps = ["//bls:go_default_library"],
)
